# amhello

./: .gitignore  README.md  configure.ac
lib/: say.c
lib/.deps/: say.Plo
lib/.libs/: libhello.lai
src/: main.c
src/.deps/: main.Po
